--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <title>IT 4403 Individual Project: Milestone #1</title>
+    <title>IT 4403 Individual Project: Milestone #3</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -80,7 +80,7 @@
         <h1>IT 4403 Individual Project</h1>
         <h2>Omar Rodriguez <br/>
             College of Computing and Software Engineering <br/>
-            Added main menu with two additional web pages. This is Project Milestone 2.
+            This updated page now displays a search bar for the user to look up books and pages results. This is Project Milestone 3.
         </h2>
         <h3>IT 4403: Advanced Web and Mobile App <br/>
             <a href="https://www.kennesaw.edu/ccse/academics/information-technology/">Department of Information Technology</a>
@@ -116,7 +116,6 @@
         let currentPage = 1;
         let totalPages = 0;
         let searchTerm = '';
-
         $(document).ready(function () {
             $('#search-button').click(function () {
                 searchTerm = $('#search-term').val();
@@ -124,7 +123,6 @@
                 searchBooks();
             });
         });
-
         function searchBooks() {
             $.ajax({
                 url: `https://www.googleapis.com/books/v1/volumes?q=${searchTerm}&startIndex=${(currentPage - 1) * 10}&maxResults=10&key=${apiKey}`,
@@ -134,7 +132,6 @@
                 }
             });
         }
-
         function displayResults(data) {
             $('#table tbody').empty();
             data.items.forEach(item => {
@@ -144,16 +141,13 @@
                                   </tr>`;
                 $('#table tbody').append(bookItem);
             });
-
             totalPages = Math.ceil(data.totalItems / 10);
             updatePagination();
-
             $('.book-item').click(function () {
                 const bookId = $(this).data('id');
                 displayBookDetails(bookId);
             });
         }
-
         function updatePagination() {
             $('.pagination').empty();
             for (let i = 1; i <= totalPages; i++) {
@@ -161,12 +155,10 @@
                 $('.pagination').append(pageButton);
             }
         }
-
         function gotoPage(page) {
             currentPage = page;
             searchBooks();
         }
-
         function displayBookDetails(bookId) {
             $.ajax({
                 url: `https://www.googleapis.com/books/v1/volumes/${bookId}?key=${apiKey}`,
